--- a/todoList-boot/src/main/resources/application.properties
+++ b/todoList-boot/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=demoProject2
+spring.application.name=todoList-boot
 
 # 서버 포트 번호 80으로 변경
 server.port=80
@@ -14,4 +14,4 @@ spring.thymeleaf.cache=false
 # (trace < debug < info < wran < error < fatal)
 
 # debug 이상부터 추적, 생략시 info부터 추적
-logging.level.edu.kh.demo=debug
+logging.level.edu.kh.todo=debug
