--- a/todoList-boot/src/main/resources/application.properties
+++ b/todoList-boot/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.thymeleaf.cache=false
 
 # debug 이상부터 추적, 생략시 info부터 추적
 logging.level.edu.kh.todo=debug
+
+# URL에 jsessionid가 보여질 때<- jsessionid :톰캣 사용해서 접속할떄 접속자 세션 관리하는것.. 
+server.servlet.session.tracking-modes=cookie
