--- a/BookManagement/src/main/resources/application.properties
+++ b/BookManagement/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.application.name=boardProject
+spring.application.name=BookManagement
 
+############## 아래로 붙여넣는 내용 ######################
 # 서버 포트 번호 80으로 변경
 server.port=80
 
@@ -14,7 +15,7 @@ spring.thymeleaf.cache=false
 # (trace < debug < info < wran < error < fatal)
 #
 # debug 이상부터 추적, 생략시 info부터 추적, 저장시 utf-8로 변경창 뜨면 변경 선택
-logging.level.edu.kh.project=debug
+logging.level.edu.sm.book=debug
 
 # URL에 jsessionid가 보여질 때<- jsessionid :톰캣 사용해서 접속할떄 접속자 세션 관리하는것.. 
 server.servlet.session.tracking-modes=cookie
